# femto

./: Cargo.toml  README.md  femto.template.toml
femto/: Cargo.toml  femto.schema.json
femto/src/: main.rs
femto/src/handlers/: command_schema.rs  mod.rs
femto_common/: Cargo.toml
femto_common/src/: error.rs  lib.rs
femto_common/src/types/: cli.rs  config.rs  mod.rs  project.rs
