[package]
name = "femto"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
inquire = "0.7.5"
ron = { version = "0.9.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
toml = { version = "0.8.20", optional = true }

[features]
default = ["config"]

config = ["config_ron", "config_toml", "config_json"]
config_ron = ["dep:ron"]
config_toml = ["dep:toml"]
config_json = ["dep:serde_json"]
