[package]
name = "femto"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
femto_common = {path = "../femto_common"}
serde_json = "1.0.140"
humantime = "2.2.0"
