[package]
name = "femto_common"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["cargo", "derive"] }
fern = { version = "0.7.1", features = ["colored"] }
git2 = "0.20.1"
github-languages = "0.4.0"
handlebars = { version = "6.3.2", features = ["string_helpers"] }
log = { version = "0.4.26", features = ["kv_serde", "serde"] }
regex = "1.11.1"
reqwest = "0.12.15"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }
